--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/lab6db?useUnicode=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/lab6db?useUnicode=true&serverTimezone=UTC&useSSL=true&verifyServerCertificate=false
 spring.datasource.username=root
 spring.datasource.password=qwerty
 spring.datasource.driverclassname=com.mysql.cj.jdbc.Driver
