--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3.8'
 
 services:
+  autoheal:
+    restart: always
   prometheus:
     image: prom/prometheus
     container_name: prometheus
