--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,8 @@ services:
       - 3307:3306
     healthcheck:
       test: ["CMD-SHELL", 'mysqladmin ping']
-      timeout: 20s
+      interval: 10s
+      timeout: 2s
       retries: 10
 
 volumes:
