--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,8 @@ services:
           
   db:
     image: mysql
+    volumes:
+      - data-volume:/var/lib/mysql
     container_name: db
     environment:
       - MYSQL_ROOT_PASSWORD=qwerty
@@ -52,7 +54,7 @@ services:
     ports:
       - 3307:3306
     healthcheck:
-      test: ["CMD-SHELL", 'mysqladmin ping']
+      test: ["CMD-SHELL", "mysqladmin ping"]
       interval: 10s
       timeout: 2s
       retries: 10
