--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   prometheus:
@@ -40,17 +40,17 @@ services:
       SPRING_DATASOURCE_PASSWORD: "qwerty"
     ports:
       - 8090:8090
-          
+
   db:
     image: mysql
     volumes:
       - data-volume:/var/lib/mysql
     container_name: db
     environment:
-      - MYSQL_ROOT_PASSWORD=qwerty
+      - MYSQL_ROOT_PASSWORD=princessa
       - MYSQL_DATABASE=lab6db
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=qwerty
+      - MYSQL_USER=diana
+      - MYSQL_PASSWORD=princessa
     ports:
       - 3307:3306
     healthcheck:
